--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-langchain==0.3.0
-langchain-community==0.3.0
-langchain-groq
-langchain-huggingface
+langchain>=0.3.0
+langchain-community>=0.3.0
 playwright
 beautifulsoup4
-sentence-transformers
 chromadb
+langchain-groq
+langchain-huggingface
+sentence-transformers
