--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-langchain==0.3.0
-langchain-community==0.3.0
+langchain
+langchain-community
+langchain-groq
+langchain-huggingface
+playwright
+beautifulsoup4
+sentence-transformers
+chromadblangchain
+langchain-community
 langchain-groq
 langchain-huggingface
 playwright
