--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-langchain==0.3.0
-langchain-community==0.3.0
+langchain==1.0.1
+langchain-community
+langchain-classic
 langchain-groq
 langchain-huggingface
 playwright
